_1.2.2_nginx_ingress/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-nlb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: app.varidha.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test-nginx-svc
                port:
                  number: 80
# kubectl delete -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.11.1/deploy/static/provider/cloud/deploy.yaml
